appId: org.wikimedia.wikipedia
tags:
  - ios
  - passing
  - advanced
---
- runFlow: subflows/onboarding-ios.yaml

- runFlow:
    when:
      visible:
        text: Explore your Wikipedia Year in Review
    commands:
      - tapOn: Done
    label: Dismiss Year In Review popup, if visible

- runFlow:
    when:
      visible: "You have been logged out"
    commands:
      - tapOn:
          text: "Continue without logging in"
    label: Dismiss the auth modal if visible

- tapOn:
    text: "Non existent view"
    optional: true
- tapOn: Search Wikipedia
- runScript: ./scripts/getSearchQuery.js
- inputText: ${output.result}
- eraseText
- inputText: qwerty
- assertVisible: ${output.result}
- runFlow: subflows/launch-clearstate-ios.yaml
