appId: org.wikipedia
tags: 
  - android
onFlowStart:
  - runFlow: subflows/launch-app.yaml
---
- tapOn: "SKIP"
- assertVisible:
    id: "org.wikipedia:id/search_container"
-  tapOn:
    id: "org.wikipedia:id/search_container"
- inputText: ${faker.name().firstName()}
